--- a/Portfolio_Project/Portfolio/templates/Portfolio/home.html
+++ b/Portfolio_Project/Portfolio/templates/Portfolio/home.html
@@ -6,11 +6,15 @@
 {% block content %}
 <div class="home">
     <div class="hero">
-        <h1>Hi, I'm <span>Muhammad Ahmad</span></h1>
-        <p>Web Developer</p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur dignissimos nostrum illo!
+        <h1 class="into-text">Hi, I'm <span class="name">Muhammad Ahmad</span></h1>
+        <p class="occupation">Web Developer</p>
+        <p class="para">
+          I am a passionate Web Developer specializing in modern, responsive websites and user-friendly digital experiences. I help businesses and individuals turn ideas into functional, high-quality web solutions.
         </p>
     </div>
+    <div class="img">
+        <img src="{% static "Portfolio\image\Ahmad.png" %}" alt="portfolioImg">
+    </div>
 </div>
+
 {% endblock content %}
