--- a/Portfolio_Project/Portfolio/templates/Portfolio/base.html
+++ b/Portfolio_Project/Portfolio/templates/Portfolio/base.html
@@ -16,14 +16,17 @@
         <nav>
             <ul>
                 <li><a href="{% url "home" %}">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">skills</a></li>
-                <li><a href="#">Contact Me</a></li>
+                <li><a href="{% url "about" %}">About</a></li>
+                <li><a href="{% url "projects" %}">Projects</a></li>
+                <li><a href="{% url "contact" %}">Contact Me</a></li>
             </ul>
         </nav>
     </div>
     {% block content %}
     {% endblock content %}
     
+    <footer>
+        <p>@ Portfolio | Muhammad Ahmad</p>
+    </footer>
 </body>
 </html>
