--- a/Portfolio_Project/Portfolio/templates/Portfolio/contact.html
+++ b/Portfolio_Project/Portfolio/templates/Portfolio/contact.html
@@ -6,11 +6,18 @@
 {% block content %}
 <div class="contact-page">
     <h1>Contact Me</h1>
-    <form action="">
-      <input type="text" placeholder="Your Name" required>
-      <input type="email" placeholder="Your Email" required>
-      <textarea rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form> 
+    <form method="POST" action="">
+    {% csrf_token %}
+
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+
+    <button type="submit">Send Message</button>
+</form> 
+{% if success %}
+<p class="success" style="text-align:center; background: green; font-size:large; padding: 12px; width: fit-content;">✅ Your message has been sent successfully!</p>
+{% endif %}
+
 </div>
 {% endblock content %}
