--- a/Portfolio_Project/Portfolio/templates/Portfolio/projects.html
+++ b/Portfolio_Project/Portfolio/templates/Portfolio/projects.html
@@ -5,35 +5,38 @@
 {% endblock %}
 {% block content %}
 <div class="project_page">
-    <div><h1 style="text-align: center;">Projects</h1></div>
-    <div class="projects">
-        <div class="column">
-            <div class="proj_box">
-                <h2 class="name">Portfolio Website</h2>
-                <span>Overview</span>
-                <p class="overview">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo voluptatem, dolor est eaque maxime doloribus?kajsdfhkjashdf jaskhdfjshadf hakshdfkjh  jaksdhfjkhasdjf aksjdhkjcnnm jashkdjf kajshdkfjhsa.
-                </p>
-                <span>Tools/Technologies</span>
-                <div class="tech_list">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Python</li>
-                    <li>Django</li>
-                    <li>Django</li>
-                </div>
-            </div>
-            <div class="img">
-                <img src={% static "Portfolio\image\project1.png"%} alt="Project1">
-                <div class="links">
-                        <a class="a" href="#">GitHub</a>
-                        <a class="a" href="#">Live</a>
-                </div>
-            </div>
-        </div>
+    <h1 style="text-align:center;">Projects</h1>
 
-        
+    <div class="projects">
+        {% for project in projects %}
+        <div class="column">
+
+            <div class="proj_box">
+                <h2 class="name">{{ project.title }}</h2>
+
+                <span>Overview</span>
+                <p class="overview">{{ project.overview }}</p>
+
+                <div class="links" style="text-align: center; text-decoration: underline;">
+                    {% if project.github_link %}
+                        <a class="a" href="{{ project.github_link }}" target="_blank">GitHub</a>
+                    {% endif %}
+                    {% if project.live_link %}
+                        <a class="a" href="{{ project.live_link }}" target="_blank">Live</a>
+                    {% endif %}
+                </div>
+            </div>
+
+            <div class="img">
+                {% if project.image %}
+                    <img src="{{ project.image.url }}" alt="{{ project.title }}">
+                {% else %}
+                    <img src="{% static 'Portfolio/image/default.png' %}" alt="No Image">
+                {% endif %}
+            </div>
+
+        </div>
+        {% endfor %}
     </div>
-    
 </div>
 {% endblock content %}
