--- a/Portfolio_Project/Portfolio/templates/Portfolio/base.html
+++ b/Portfolio_Project/Portfolio/templates/Portfolio/base.html
@@ -27,6 +27,13 @@
     <div class="menu-icon" id="hamburger">☰</div>
 </header>
 {% block content %}{% endblock content %}
+<footer>
+  <div>
+    <p>© 2026 Muhammad Ahmad. All rights reserved.</p>
+  </div>
+</footer>
+
+
 
 <script>
     const hamburger = document.getElementById("hamburger");
